--- a/longtable-example.html
+++ b/longtable-example.html
@@ -18,7 +18,7 @@
   </tbody>
 </table>
 <script type="text/javascript">
-  $(function () {$('#jsversions').longtable({'perPage': 5});});
+  longtable(document.getElementById('jsversions'), {'perPage': 5});
 </script>
 <style type="text/css">
   .paging-controls {text-align: center;}
