--- a/minform-example.html
+++ b/minform-example.html
@@ -1,6 +1,9 @@
-<form>
-  <input placeholder="Placeheld Text">
-  <input autofocus>
-  <input required>
-  <input type="submit">
+<form id="minform-ex" method="GET" action="">
+  <input name="placeholder" placeholder="Placeheld Text">
+  <input name="autofocus" autofocus>
+  <input name="required" required>
+  <input type="submit" class="btn">
 </form>
+<script type="text/javascript">
+  minform(document.getElementById('minform-ex'));
+</script>
