I changed this class name.

--- a/longtable-example.html
+++ b/longtable-example.html
@@ -28,5 +28,5 @@
   .paging-controls .prev:before {content: "< prev";}
   .paging-controls .next {float: right;}
   .paging-controls .next:after {content: "next >";}
-  .paging-controls .elide:before {content: " ... ";}
+  .paging-controls .elipsis:before {content: " ... ";}
 </style>
